chore: travaux lab